Opened 18 years ago
Closed 16 years ago
#927 closed bug (fixed)
[nvidia] stability problems with GeForce 7300
Reported by: | diver | Owned by: | rudolfc |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Drivers/Graphics/nVidia | Version: | R1/pre-alpha1 |
Keywords: | Cc: | j_freeman, rudolfc | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Bug report from user shellezyaque http://qube.ru/user/shellezyaque/ When he boot Haiku with his 0x01df, Nvidia GeForce 7300 GS he could only work with terminal, moving a window or opening a folder will deadlock app_server.
With TNT2 Haiku is working ok, but left some artifacts on cursor moving, like a few horizontal thin lines.
Change History (8)
comment:1 by , 18 years ago
comment:4 by , 17 years ago
Cc: | added |
---|
It seems GeForce 7800 GT (device 0092) has started having this issue as well.
comment:5 by , 17 years ago
Cc: | added |
---|
comment:6 by , 16 years ago
whit this card crash when start the terminal :(
01:00.0 VGA compatible controller [0300]: nVidia Corporation G72M [Quadro NVS 110M/GeForce Go 7300] [10de:01d7] (rev a1)
comment:7 by , 16 years ago
Owner: | changed from | to
---|
I'm guessing this should probably be assigned to Rudolf.
comment:8 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Hi,
The acceleration engine wasn't properly powered up up for G72 cards (Geforce 7300, 7400 and 7500) at least.
Fixed since R30783, so closing ticket.
Testable only with pre-R30278 builds, since app_server unfortunately nolonger uses acceleration since then..
Bye!
Rudolf.
Oh and btw, installing haiku drivers for GeForce 7300 on R5 will deadlock app_server too, as soon as mouse pointer appears.