src/add-ons/accelerants/nvidia/engine/nv_general.c
@@ -1,7 +1,7 @@
 /* Authors:
    Mark Watson 12/1999,
    Apsed,
-   Rudolf Cornelissen 10/2002-6/2008
+   Rudolf Cornelissen 10/2002-5/2009
    tst..
 */
 
@@ -92,7 +92,7 @@ status_t nv_general_powerup()
 {
 	status_t status;
 
-	LOG(1,("POWERUP: Haiku nVidia Accelerant 0.89 running.\n"));
+	LOG(1,("POWERUP: Haiku nVidia Accelerant 0.90 running.\n"));
 
 	/* log VBLANK INT usability status */
 	if (si->ps.int_assigned)
@@ -1654,17 +1654,18 @@ status_t nv_general_head_select(bool cross)
 
 static void unlock_card(void)
 {
-	/* power-up all nvidia hardware function blocks */
+	/* make sure to power-up all nvidia hardware function blocks */
 	/* bit 28: OVERLAY ENGINE (BES),
 	 * bit 25: CRTC2, (> NV04A)
 	 * bit 24: CRTC1,
 	 * bit 20: framebuffer,
 	 * bit 16: PPMI,
+	 * bit 13: some part of at least the G72 acceleration engine,
 	 * bit 12: PGRAPH,
 	 * bit  8: PFIFO,
 	 * bit  4: PMEDIA,
 	 * bit  0: TVOUT. (> NV04A) */
-	NV_REG32(NV32_PWRUPCTRL) = 0x13111111;
+	NV_REG32(NV32_PWRUPCTRL) = 0xffffffff;
 
 	/* select colormode CRTC registers base adresses */
 	NV_REG8(NV8_MISCW) = 0xcb;
@@ -1689,9 +1690,9 @@ static void unlock_card(void)
 static status_t nv_general_bios_to_powergraphics()
 {
 	/* let acc engine make power off/power on cycle to start 'fresh' */
-	NV_REG32(NV32_PWRUPCTRL) = 0x13110011;
+	NV_REG32(NV32_PWRUPCTRL) = 0xffff00ff;
 	snooze(1000);
-	NV_REG32(NV32_PWRUPCTRL) = 0x13111111;
+	NV_REG32(NV32_PWRUPCTRL) = 0xffffffff;
 
 	unlock_card();
 
